--- a/templates/products.html
+++ b/templates/products.html
@@ -85,7 +85,7 @@
           <td>{{ product.prod_name }}</td>
           <td>{{ product.prod_description }}</td>
           <td>{{ product.prod_price}}</td>
-          <td>{{ product.prod_quantity}}</td>
+          <td>{{ product.prod_qoh}}</td>
         </tr>
       {% else %}
         <tr>
