--- a/templates/ads.html
+++ b/templates/ads.html
@@ -6,7 +6,7 @@
         <fieldset>
 
         <!-- Form Name -->
-        <legend>Add a product</legend>
+        <legend>Add an Advertisement</legend>
 
         <!-- Text input-->
         <div class="form-group">
